k8s/misc/test/misc/deployment--http-svc.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-svc
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-svc
  template:
    metadata:
      labels:
        app: http-svc
    spec:
      containers:
        - env:
            - name: NODE_NAME
              valueFrom:
                fieldRef:
                  fieldPath: spec.nodeName
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: POD_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
          image: k8s.gcr.io/e2e-test-images/echoserver:2.3
          name: http-svc
          ports:
            - containerPort: 8080
