k8s/misc/test/misc/ingress--nginx.yml
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
##    nginx.ingress.kubernetes.io/ssl-redirect: "true"
##    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
##    cert-manager.io/issuer: letsencrypt-staging
##    nginx.ingress.kubernetes.io/backend-protocol:  "HTTPS"
##    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
##    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#  name: nginx
#  namespace: test
#spec:
#  rules:
#    - host: jameshounshell.com
#      http:
#        paths:
#          - backend:
#              service:
#                name: http-svc
#                port:
#                  number: 80
#            path: /
#            pathType: Prefix
#  tls:
#    - hosts:
#        - jameshounshell.com
#      secretName: jameshounshell-com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: test
spec:
  ingressClassName: nginx
  rules:
    - host: jameshounshell.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: http-svc
                port:
                  number: 80
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
        - jameshounshell.com
      secretName: jameshounshell-com
