k8s/misc/test/misc/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
  - namespace--test.yml
  - deployment--http-svc.yml
  - ingress--nginx.yml
  - service--http-svc.yml
#  - issuer--letsencrypt-staging.yml
#  - secret--cloudflare-api-key-secret.yml
