k8s/misc/test/misc/secret--cloudflare-api-key-secret.yml
---
apiVersion: v1
kind: Secret
metadata:
  name: cloudflare-api-key-secret
  namespace: test
stringData:
  api-key: <api key here>
type: Opaque
