k8s/misc/test/misc/service--http-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-svc
  name: http-svc
  namespace: test
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: http-svc
